objects/Account.object
<CustomObject>
    <fields>
        <fullName>Verified_by_Inspector__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified by Inspector</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>Billing Postal Code</description>
        <formula>BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_report_purpose_only__c</fullName>
        <label>Zip</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>correlationID__c</fullName>
        <label>correlationID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>maps__AssignmentRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Assignment Rule</label>
        <referenceTo>maps__AssignmentRule__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>Registration_Number__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Verification_Completion_Date__c</columns>
        <columns>Inspected_by_CDPH_or_FDA__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_PSP_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>County__c</columns>
        <columns>Inspected_by_CDPH_or_FDA__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>Farm_Representative__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.PSP_Farm</value>
        </filters>
        <label>My PSP Accounts</label>
    </listViews>
    <listViews>
        <fullName>Unverified_Farms</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Verified__c</field>
            <operation>equals</operation>
            <value>Not Verified</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.PSP_Farm</value>
        </filters>
        <label>Unverified Farms</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Verified_Farms</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Verified__c</field>
            <operation>equals</operation>
            <value>Verified</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.PSP_Farm</value>
        </filters>
        <label>Verified Farms</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <roleAndSubordinates>Field_and_Compliance_Team_Supervisors</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Application</fullName>
        <active>true</active>
        <label>Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Application_Complete</fullName>
        <active>true</active>
        <label>Application Complete</label>
    </recordTypes>
    <recordTypes>
        <fullName>Application_Rejected</fullName>
        <active>true</active>
        <label>Application Rejected</label>
    </recordTypes>
    <recordTypes>
        <fullName>PSP_Farm</fullName>
        <active>true</active>
        <description>This Record Type is for PSP</description>
        <label>PSP Farm</label>
    </recordTypes>
    <recordTypes>
        <fullName>Person</fullName>
        <active>true</active>
        <label>Person</label>
    </recordTypes>
    <recordTypes>
        <fullName>RSA</fullName>
        <active>true</active>
        <label>RSA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewal</fullName>
        <active>true</active>
        <label>Renewal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewal_Complete</fullName>
        <active>true</active>
        <label>Renewal Complete</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewal_Rejected</fullName>
        <active>true</active>
        <label>Renewal Rejected</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Make_Account_Name_read_only</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISCHANGED(Name),NOT ISBLANK(PRIORVALUE(Name)),
 $Profile.Name = &quot;CDFA Community Login User&quot;,  
  NOT(RecordType.Name =&quot;Application&quot;)
   )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Your business name cannot be updated due to California regulatory statutes. Please contact the RSA Program for assistance: rsa@cdfa.ca.gov.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_for_Date_of_last_contact</fullName>
        <active>true</active>
        <errorConditionFormula>Date_of_last_contact__c &gt; Today ()</errorConditionFormula>
        <errorDisplayField>Date_of_last_contact__c</errorDisplayField>
        <errorMessage>Cannot enter future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_for_Verification_Completion</fullName>
        <active>true</active>
        <errorConditionFormula>Verification_Completion_Date__c &gt; Today ()</errorConditionFormula>
        <errorDisplayField>Verification_Completion_Date__c</errorDisplayField>
        <errorMessage>Cannot enter future date</errorMessage>
    </validationRules>
</CustomObject>